--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
   <body>
     <h1 style="text-align: center">Arrange Images by drag and drop</h1>
     <div class="flex" id="parent">
-      <div draggable="true" class="image" id="div1">Image 1</div>
-      <div draggable="true" class="image" id="div2">Image 2</div>
-      <div draggable="true" class="image" id="div3">Image 3</div>
-      <div draggable="true" class="image" id="div4">Image 4</div>
-      <div draggable="true" class="image" id="div5">Image 5</div>
-      <div draggable="true" class="image" id="div6">Image 6</div>
+      <div draggable="true" class="image" id="div1" ondragstart="drag(event)">Image 1</div>
+      <div draggable="true" class="image" id="div2" ondragstart="drag(event)">Image 2</div>
+      <div draggable="true" class="image" id="div3" ondragstart="drag(event)">Image 3</div>
+      <div draggable="true" class="image" id="div4" ondragstart="drag(event)">Image 4</div>
+      <div draggable="true" class="image" id="div5" ondragstart="drag(event)">Image 5</div>
+      <div draggable="true" class="image" id="div6" ondragstart="drag(event)">Image 6</div>
     </div>
   </body>
 </html>
